<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/financialtransactions2" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/profit_and_discount_calculator"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.522" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:hint="@string/amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.616" />

        <ImageView
            android:id="@+id/convert_to_actualamount"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:contentDescription="@string/other_way_round"
            android:contextClickable="true"
            android:src="@drawable/swap_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinner"
            app:layout_constraintVertical_bias="0.27" />

        <EditText
            android:id="@+id/amount_entered"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:hint="@string/amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.298"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.683" />

        <EditText
            android:id="@+id/percentage_entered"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:hint="@string/percentage"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.298"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.767" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/bottom_style"
            android:gravity="center"
            android:onClick="calculate_total"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.834" />

        <TextView
            android:id="@+id/display_total"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:hint="@string/display_total"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.959" />

        <!--    <RelativeLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="400dp"-->
        <!--        android:background="@drawable/shadow222"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.0"-->
        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
        <!--        android:visibility="visible"-->
        <!--        android:alpha="1"-->
        <!--        app:layout_constraintRight_toRightOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:layout_constraintVertical_bias="1.0"-->
        <!--        android:contentDescription="@string/background" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>